--- a/reflections/abc374.md
+++ b/reflections/abc374.md
@@ -13,18 +13,24 @@ import itertools
 itertools.zip_longest(S, T)
 ```
 
-https://qiita.com/QUANON/items/6c1a48e41e9e311733ca
-
-https://qiita.com/edad811/items/0d28e6595a3c338567ec
+- [要素数の異なる list を zip する #Python - Qiita](https://qiita.com/QUANON/items/6c1a48e41e9e311733ca)
+- [Python3のitertoolsモジュールをまとめてみました! #Python3 - Qiita](https://qiita.com/edad811/items/0d28e6595a3c338567ec)
 
 
 ## C
 
-DPっぽいけど書けないからbit全探索したらTLE。
-Twitterみたら全探索でも通るっぽい？悪いのはPython？
+DPっぽいけど書けないからbit全探索したらTLE。Twitterみたら全探索でも通るっぽい？~~悪いのはPython？~~
 
-https://www.momoyama-usagi.com/entry/info-algo-dp
+CPythonはダメだったけどPyPyなら通った。悪いのはPython。
 
-https://algo-logic.info/subset-sum/
+- [うさぎでもわかるアルゴリズム　動的計画法 | 工業大学生ももやまのうさぎ塾](https://www.momoyama-usagi.com/entry/info-algo-dp)
+- [部分和問題（N個の配列から和がKになるように選ぶ）とその解き方 | アルゴリズムロジック](https://algo-logic.info/subset-sum/)
+- [Python de アルゴリズム（bit全探索） #Python - Qiita](https://qiita.com/gogotealove/items/11f9e83218926211083a)
 
-https://qiita.com/gogotealove/items/11f9e83218926211083a
+
+## D
+
+順番と向きを全パターン試す。
+
+- [競プロの基本事項確認~順列生成の方法~ #Python - Qiita](https://qiita.com/DaikiSuyama/items/2483a1af0af38408317b)
+- [Python ビット演算 超入門 #Python - Qiita](https://qiita.com/7shi/items/41d262ca11ea16d85abc)
