--- a/reflections/abc382.md
+++ b/reflections/abc382.md
@@ -15,7 +15,12 @@ reverseしてreplaceしてreverse
 
 ## C
 
-愚直して単調減少にする
+~~ 愚直して単調減少にする ~~
+
+単調減少にして二分探索
+
+- 参考
+  - [提出 #60358915 - AtCoder プログラミングコンテスト2024（AtCoder Beginner Contest 382）](https://atcoder.jp/contests/abc382/submissions/60358915)
 
 ## D
 
